Finished Page Layout section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Type your title here</title>
+    <title>Ed's Rock Paper Scissors</title>
     <!-- Bootstrap Styles-->
     <link rel="stylesheet" href="resources/styles/bootstrap.min.css">
     <link rel="stylesheet" href="resources/styles/styles.css" />
@@ -13,6 +13,34 @@
 <body>
     <div class="container">
         <!-- WORK FROM INSIDE THIS CONTAINER-->
+        <h1>Rock Paper Scissors</h1>
+        <div id="welcome-screen">
+            <form id="name-form">
+                <div>
+                    <label for="username">Your Name</label>
+                    <input type="text" id="username" name="username"><br>Enter Name Here<br>
+                </div>
+            </form>
+            <button id="start-game-button">Start Game!</button>
+        </div>
+
+        <div id="game-screen">
+            <div id="score-tally">
+                <p id="score">User: 0 v CPU: 0</p>
+            </div>
+            <form id="game-form">
+                <div>
+                    <label for="user-selection">Select your choice</label>
+                    <select name="user-selection" id="user-selection">
+                        <option value="rock">Rock</option>
+                        <option value="paper">Paper</option>
+                        <option value="scissors">Scissors</option>
+                    </select>
+                </div>
+                <button id="go-button">Go!</button>
+            </form>
+            <p id="game-history"></p>
+        </div>
 
     </div>
 
